--- a/apps/buzzcms/sample_data/05_entry.yml
+++ b/apps/buzzcms/sample_data/05_entry.yml
@@ -4,12 +4,30 @@
 - slug: post-1
   title: Post 1
   entry_type: post
+  image: xxx.jpg
+  images:
+    - id: aaa.jpg
+      caption: Image aaa
+    - id: bbb.jpg
+      caption: Image bbb
   taxons:
     - slug: post-category-1
       taxonomy: post_category
 - slug: post-2
   title: Post 2
   entry_type: post
+  image: yyy.jpg
+  images:
+    - id: ccc.jpg
+      caption: Image ccc
+    - id: ddd.jpg
+      caption: Image ddd
+  seo:
+    title: My title
+    description: My title
+    keywords:
+      - keyword 01
+      - keyword 02
   taxons:
     - slug: post-category-1
       taxonomy: post_category
